--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nature tours, Advanced CSS and Sass Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:sass": "node-sass sass/main.scss css/style.css"
   },
   "repository": {
     "type": "git",
